[gd_scene load_steps=5 format=3 uid="uid://c65tg7whw1770"]

[ext_resource type="Texture2D" uid="uid://df75iob8nvrc" path="res://assets/buttons/health.png" id="1"]
[ext_resource type="Texture2D" uid="uid://ca3duh8ybajup" path="res://assets/buttons/bar.png" id="2"]
[ext_resource type="Script" uid="uid://bii23haldsxeq" path="res://scripts/ui.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://cc7xiephxwxhd" path="res://assets/PlayerMageTexture/orb_gold.png" id="4"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("3")

[node name="HealthBarContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 70.0
grow_horizontal = 0

[node name="HealthBarFull" type="TextureRect" parent="HealthBarContainer"]
texture_filter = 1
layout_mode = 0
offset_left = -18.0
offset_top = -8.0
offset_right = 183.0
offset_bottom = 38.0
texture = ExtResource("1")
expand_mode = 1

[node name="HealthBarEmpty" type="TextureRect" parent="HealthBarContainer"]
texture_filter = 1
layout_mode = 0
offset_left = 1.0
offset_top = 3.0
offset_right = 165.0
offset_bottom = 28.0
texture = ExtResource("2")
expand_mode = 1

[node name="HealthText" type="Label" parent="HealthBarContainer"]
texture_filter = 1
layout_mode = 0
offset_left = 2.0
offset_top = -17.0
offset_right = 156.0
offset_bottom = 48.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 16
text = "100 / 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 60.0

[node name="LevelLabel" type="Label" parent="LevelContainer"]
layout_mode = 0
offset_left = -11.0
offset_top = -14.0
offset_right = 89.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 24
text = "LVL 1"
vertical_alignment = 1

[node name="GoldContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 7.0
offset_top = 45.0
offset_right = 137.0
offset_bottom = 85.0

[node name="GoldIcon" type="TextureRect" parent="GoldContainer"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4")
expand_mode = 1
stretch_mode = 5

[node name="GoldLabel" type="Label" parent="GoldContainer"]
layout_mode = 0
offset_left = 45.0
offset_right = 130.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 22
text = "0"
vertical_alignment = 1
